Updated README.md with final "To Run" instructions